; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_proctouch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_filt_proctouch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i64, i32 }
%struct.kevent_internal_s = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @filt_proctouch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_proctouch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.kevent_internal_s*, align 8
  %5 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %4, align 8
  %6 = call i32 (...) @proc_klist_lock()
  %7 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %8 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.knote*, %struct.knote** %3, align 8
  %11 = getelementptr inbounds %struct.knote, %struct.knote* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 8
  %12 = load %struct.knote*, %struct.knote** %3, align 8
  %13 = getelementptr inbounds %struct.knote, %struct.knote* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  %16 = zext i1 %15 to i32
  store i32 %16, i32* %5, align 4
  %17 = call i32 (...) @proc_klist_unlock()
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @proc_klist_lock(...) #1

declare dso_local i32 @proc_klist_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
